package com.youngcha.liargameapp.domain

data class Keyword(
    val keywordId: String,
    val word: String,
    val category: String,
)