package com.youngcha.liargameapp.model

data class Game(val gameId: String) {
}