package com.youngcha.liargameapp.model

data class User(val uuid: String) {
}