@startuml
!pragma layout smetana

entity room {
   {field} room_id: Int
   {method} room_code: String(32)
   {method} created_at: Datetime
}
entity user {
   {field} user_id: Int
   {method} room_id: Int
   {method} user_code: String(32)
   {method} nickname: String(32)
   {method} joined_at: Datetime
}
entity game {
    {field} game_id: Int
    {method} liar_user_id: Int
    {method} room_id: Int
    {method} keyword_id: Int
    {method} start_at: Datetime
}
entity keyword {
    {field} keyword_id: Int
    {method} category: String(10)
    {method} word: String(10)
}

room <-- user
room <-- game
keyword <-- game

@enduml
